welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: type mismatch;
 found   : String
 required: Int
  var decalage:Int=litMessage()
                             ^Array2:11: error: not found: value T
  setCouleurBrosse(T(decalage))
                   ^Array2:14: error: not found: value T
    setCouleurBrosse(T((i+decalage)% T.length))
                     ^Array2:14: error: not found: value T
    setCouleurBrosse(T((i+decalage)% T.length))
                                     ^